--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
                     <td>
                     <select name="health">
                     <option value="">選択してください</option>
-                    <option value="">良い</option>
-                    <option value="">普通</option>
-                    <option value="">良くない</option>
+                    <option value="良い">良い</option>
+                    <option value="普通">普通</option>
+                    <option value="良くない">良くない</option>
                     </select>
                     </td>
                 </tr>
@@ -68,11 +68,11 @@
                 <tr id="condition">
                     <th>気になる症状</th>
                     <td>
-                    <input type="radio" value="頭痛">なし</input> 
-                    <input type="radio" value="頭痛">頭痛</input> 
-                    <input type="radio" value="腹痛">腹痛</input>
-                    <input type="radio" value="倦怠感">倦怠感</input><br>
-                    <input type="radio" value="その他">その他</input>
+                    <input type="radio" name="condition" value="頭痛">なし</input> 
+                    <input type="radio" name="condition" value="頭痛">頭痛</input> 
+                    <input type="radio" name="condition" value="腹痛">腹痛</input>
+                    <input type="radio" name="condition" value="倦怠感">倦怠感</input><br>
+                    <input type="radio" name="condition" value="その他">その他</input>
                     </td>
                 </tr>
                 <tr id="free">
