--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
                     <td></td>
                 </tr>
                 <tr id="tempsMin">
-                    <th>最低気温</th>
+                    <th>現在の気温</th>
                     <td></td>
                 </tr>
-                <tr id="tempsMax">
+                <!-- <tr id="tempsMax">
                     <th>最高気温</th>
                     <td></td>
-                </tr>
+                </tr> -->
                 <tr id="tomorrow">
                     <th>明日の天気</th>
                     <td></td>
@@ -67,12 +67,12 @@
                 </tr>
                 <tr id="condition">
                     <th>気になる症状</th>
-                    <td>
-                    <input type="radio" name="condition" value="頭痛">なし</input> 
-                    <input type="radio" name="condition" value="頭痛">頭痛</input> 
-                    <input type="radio" name="condition" value="腹痛">腹痛</input>
-                    <input type="radio" name="condition" value="倦怠感">倦怠感</input><br>
-                    <input type="radio" name="condition" value="その他">その他</input>
+                    <td id="conditionForm">
+                        <input type="radio" name="condition" value="なし" class="toggle-radio"> なし<br>
+                        <input type="radio" name="condition" value="頭痛" class="toggle-radio"> 頭痛<br>
+                        <input type="radio" name="condition" value="腰痛" class="toggle-radio"> 腰痛<br>
+                        <input type="radio" name="condition" value="倦怠感" class="toggle-radio"> 倦怠感<br>
+                        <input type="radio" name="condition" value="その他" class="toggle-radio"> その他<br>
                     </td>
                 </tr>
                 <tr id="free">
@@ -105,6 +105,23 @@
         let day = now.getDay();
         let str = year + "-" + month + "-" + date + "(" + week[day] + ") " 
         $('#view').html(str);
+
+        $(document).ready(function () {
+         // ラジオボタンをクリックしたときの処理
+        $('.toggle-radio').on('click', function (e) {
+        const $this = $(this);
+
+        // 状態を保存するためにカスタム属性 'data-was-checked' を確認
+        if ($this.data('was-checked')) {
+            $this.prop('checked', false); // 解除
+            $this.data('was-checked', false); // 状態を更新
+        } else {
+            // 他のラジオボタンが選択されているときの処理
+            $('input[name="condition"]').data('was-checked', false); // 全て未選択に
+            $this.data('was-checked', true); // 自分を選択状態に
+                }
+            });
+        });
 
 
         //1.Save クリックイベント
@@ -146,10 +163,17 @@
 
 
         //2.clear クリックイベント
-        $("#clear").on("click", function () {
-        localStorage.clear();
-        $("#list").empty();
-        });
+    $// Clearボタンのクリックイベント
+    $("#clear").on("click", function () {
+        if (confirm("すべてのデータを削除してもよろしいですか？")) {
+            // ローカルストレージをクリア
+            localStorage.clear();
+            // 表示されているリストをクリア
+            $("#list").empty();
+            alert("データを削除しました。");
+        }
+    });
+
 
         //3.ページ読み込み：保存データ取得表示
         for (let i = 0; i < localStorage.length; i++) {
@@ -176,6 +200,7 @@
         //※こんなこともできる例
     </script>
     <script src="js/index.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </body>
 
 </html>
