--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <td id="conditionForm">
                         <input type="radio" name="condition" value="なし" class="toggle-radio"> なし<br>
                         <input type="radio" name="condition" value="頭痛" class="toggle-radio"> 頭痛<br>
-                        <input type="radio" name="condition" value="腰痛" class="toggle-radio"> 腰痛<br>
+                        <input type="radio" name="condition" value="腹痛" class="toggle-radio"> 腹痛<br>
                         <input type="radio" name="condition" value="倦怠感" class="toggle-radio"> 倦怠感<br>
                         <input type="radio" name="condition" value="その他" class="toggle-radio"> その他<br>
                     </td>
