--- a/index.html
+++ b/index.html
@@ -24,11 +24,6 @@
                 <tr id="tempsMin">
                     <th>現在の気温</th>
                     <td></td>
-                </tr>
-                <!-- <tr id="tempsMax">
-                    <th>最高気温</th>
-                    <td></td>
-                </tr> -->
                 <tr id="tomorrow">
                     <th>明日の天気</th>
                     <td></td>
@@ -65,7 +60,7 @@
                     </td>
                 </tr>
                 <tr id="condition">
-                    <th>気になる症状</th>
+                    <th>最も気になる症状</th>
                     <td id="conditionForm">
                         <input type="radio" name="condition" value="なし" class="toggle-radio"> なし<br>
                         <input type="radio" name="condition" value="頭痛" class="toggle-radio"> 頭痛<br>
@@ -77,7 +72,7 @@
                 <tr id="free">
                     <th>その他</th>
                     <td>
-                     <textarea id="text" placeholder="上記にその他をつけた場合入力"></textarea>
+                     <textarea id="text" placeholder="上記にその他をつけた場合は必ず入力"></textarea>
                     </td>
                 </tr>
                 </table>
