health-memo内のクリア

--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
                 <tr id="body-temp">
                     <th>体温</th>
                     <td>
-                    <input type="text"> ℃
+                    <input type="text" placeholder="例: 36.5"> ℃
                     </td>
                 </tr>
                 <tr id="pressure">
                     <th>血圧</th>
                     <td>
-                    <input type="text" name="upper" placeholder="上"> / <br> <input type="text" name="lower" placeholder="下"> mmHg
+                    <input type="text" name="upper" placeholder="例: 110"> / <br> <input type="text" name="lower" placeholder="例: 70"> mmHg
                     </td>
                 </tr>
                 <tr id="condition">
