--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <!-- ここに追加データが挿入される -->
     </ul>
 
-    <footer><small>G's</small></footer>
+    <footer></footer>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/index.js"></script>
