--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
                 <h2 id="view"></h2>
                 <table>
                 <tr id="today">
-                    <th>今日の天気</th>
+                    <th>今日の<br>天気</th>
                     <td></td>
                 </tr>
                 <tr id="tempsMin">
-                    <th>現在の気温</th>
+                    <th>現在の<br>気温</th>
                     <td></td>
                 <tr id="tomorrow">
-                    <th>明日の天気</th>
+                    <th>明日の<br>天気</th>
                     <td></td>
                 </tr>
                 <tr id="dayAfterTomorrow">
